# codexswitch-cli

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh  package.json
.github/: dependabot.yml
.github/workflows/: docs.yml  release.yml  security-audit.yml  tests.yml
checksums/: v1.0.0.txt  v1.0.1.txt  v1.0.2.txt
docs/: json-output.md  releasing.md  usage.md  verification.md
scripts/: check-docs.sh  check-release-version.mjs  check-toolchain.sh  check.sh  package-npm.sh  release-artifacts.sh  release-tag  smoke-test-npm-wrapper.sh  smoke-test-npm.sh  verify-artifacts.sh
src/: auth.rs  cli.rs  common.rs  doctor.rs  json_response.rs  lib.rs  main.rs  messages.rs  profiles.rs  test_utils.rs  updates.rs  usage.rs
src/profiles/: config_snapshot.rs  identity.rs  import_export.rs  index.rs  json_output.rs  labels.rs  managed_files.rs  paths.rs  store.rs  tests.rs
tests/: auth.rs  cli.rs  updates.rs
tests/cli/: json_contract.rs
